--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_STATUS=PROD
-VITE_RESEND_API_KEY=re_33ULCMam_H7Y7LQmzWCm5MLrKbcgdCTbs
+VITE_STATUS=TEST
+VITE_RESEND_API_KEY=re_jaYKHPwu_DauwPuWCLZfBn2qRjUj7nWQo
+VITE_URL=http://localhost:4000
