--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-social-icons": "^6.22.0",
     "resend": "^4.1.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
